k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclimate-api-deployment
  labels:
    app: openclimate-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openclimate-api
  template:
    metadata:
      labels:
        app: openclimate-api
    spec:
      containers:
      - name: openclimate-api
        image: public.ecr.aws/openearthfoundation/openclimate-api
        imagePullPolicy: Always
        ports:
        - containerPort: 3100
        env:
        - name: NODE_ENV
          value: development
        - name: CONTROLLERPORT
          value: 3100
        - name: AGENTADDRESS
          value: http://agent-hub:8150
        - name: WEB_ROOT
          value: https://localhost
        - name: JWT_SECRET
          value: ZBVgToVv72zffZE2ksUYNAhYmNCXwgKp
        - name: SESSION_SECRET 
          value: aZj6iXNkrtmLrAT0HsTrp7dRR7r4U7P0
        - name: SCHEMA_VERIFIED_EMPLOYEE
          value: RSaZ64jxn2NbpH8MgBdy4C:2:Verified_Employee:1.0
        - name: POSGRES_ADDRESS
          value: hub-db
        - name: POSGRES_DB
          value: development
        - name: POSTGRES_USER
          value: development
        - name: POSGRES_PASSWORD
          value: development
        resources:
          limits:
            memory: "64Mi"
            cpu: "256m"
