k8s/openclimate-elasticsearch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openclimate-elasticsearch-service
spec:
  selector:
    app: openclimate-elasticsearch
  ports:
    - name: openclimate-elasticsearch-service-port
      protocol: TCP
      port: 9200
      targetPort: 9200
