k8s/openclimate-ingress.aws.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:004557241454:certificate/8dda2333-9e56-4847-a39a-9978c094316f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:us-east-1:004557241454:certificate/8dda2333-9e56-4847-a39a-9978c094316f","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTPS\":443}]","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip","kubernetes.io/ingress.class":"alb"},"name":"ingress","namespace":"default"},"spec":{"rules":[{"host":"seba.openearth.dev"," [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2022-12-29T16:06:36Z"
  finalizers:
    - ingress.k8s.aws/resources
  generation: 5
  name: ingress
  namespace: default
  resourceVersion: "10705880"
  uid: 73cb3b85-ed8e-40c2-bccb-56fece3eaec5
spec:
  rules:
    - host: seba.openearth.dev
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: servicea.openearth.dev
      http:
        paths:
          - backend:
              service:
                name: servicea
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: helloworld.openearth.dev
      http:
        paths:
          - backend:
              service:
                name: helloworld
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - hostname: k8s-default-ingress-61c91d0f2e-822013987.us-east-1.elb.amazonaws.com
