k8s/openclimate-ingress.local.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclimate-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: openclimate-api-service
                port:
                  number: 3100
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openclimate-ui-service
                port:
                  number: 80
