k8s/openclimate-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openclimate-ui-service
spec:
  selector:
    app: openclimate-ui
  ports:
    - name: openclimate-ui-service-port
      protocol: TCP
      port: 80
      targetPort: 80
