k8s/postgresql-deployment.aws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgresql-persistentvolumeclaim
      containers:
      - name: postgresql
        image: postgres:14
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        env:
          - name: "POSTGRES_USER"
            value: "development"
          - name: "POSTGRES_PASSWORD"
            value: "development"
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: "/data"
            name: data
