k8s/postgresql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  labels:
    app: postgresql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:14
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        env:
          - name: "POSTGRES_USER"
            value: "development"
          - name: "POSTGRES_PASSWORD"
            value: "development"
        ports:
          - containerPort: 5432
